[metadata]
# replace with your username:
name = clean_package_misha_sid
version = 1.0.0
author = Dmitrii Malii, Misha Sid
author_email = dmitrii.malii@gmail.com, mishasydorchuk@gmail.com
description = CLI personal helper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = cli_helper
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src